# kaggle_cryo_et

./: .gitignore  LICENSE  TODO  eval_gt.py  pyproject.toml  requirements.txt  setup_poetry.sh
data/: baseline_submission_copick.py  open_zarr.md  process_data_copick.py  process_data_copick_baseline.py  save_copick_config.py  save_copick_config_test.py  save_copick_config_train.py  visualize_data_2d.py  visualize_data_3d.ipynb
metrics/: metrics.py
shared/: processing.py
