[tool.poetry]
name = "kaggle_cryo_et"
version = "1.0.0"
authors = ["Michele Toni"]
description = "Kaggle competition CZII - CryoET Object Identification code"

[tool.poetry.dependencies]
python = "^3.10"

albumentations="^1.4.22"
copick="^0.8.0"
efficientnet-pytorch="^0.7.1"
huggingface-hub="^0.20.2"
imageio="^2.33.1"
matplotlib="^3.8.2"
matplotlib-inline="^0.1.6"
nvidia-cublas-cu12="^12.1.3.1"
nvidia-cuda-cupti-cu12="^12.1.105"
nvidia-cuda-nvrtc-cu12="^12.1.105"
nvidia-cuda-runtime-cu12="^12.1.105"
nvidia-cudnn-cu12="^8.9.2.26"
nvidia-cufft-cu12="^11.0.2.54"
nvidia-curand-cu12="^10.3.2.106"
nvidia-cusolver-cu12="^11.4.5.107"
nvidia-cusparse-cu12="^12.1.0.106"
nvidia-nccl-cu12="^2.18.1"
nvidia-nvjitlink-cu12="^12.3.101"
nvidia-nvtx-cu12="^12.1.105"
ome-zarr="^0.9.0"
open3d="^0.18.0"
opencv-python="^4.9.0.80"
opencv-python-headless="^4.9.0.80"
pandas="^2.1.3"
pillow="^10.2.0"
plotly="^5.18.0"
pretrainedmodels="^0.7.4"
prompt-toolkit="^3.0.43"
protobuf="^3.20.3"
scikit-learn="^1.3.2"
scipy="^1.11.4"
segmentation-models-pytorch="^0.3.3"
tensorboard="^2.18.0"
tensorboardX="^2.6.2.2"
timm="^0.9.2"
tomli="^2.0.1"
torch="^2.1.2"
torchfile="^0.1.0"
torchvision="^0.16.2"
tqdm="^4.43.0"
zarr="^2.18.3"

[tool.poetry.dev-dependencies]
black="^23.3.0"
isort="^5.11.5"
ipython="^8.21.0"
ipywidgets="^8.1.2"
jupyter_core="^5.7.1"
jupyterlab_widgets="^3.0.10"
nbformat="^5.9.2"

[tool.black]
line-length = 80
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
use_parentheses = true